--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -50,7 +50,13 @@
    },
    "outputs": [],
    "source": [
-    "def _MI_continuous_SNP(a, b, a_min, a_max, N=500):\n",
+    "def MI_continuous_SNP(a,\n",
+    "                      b,\n",
+    "                      a_min,\n",
+    "                      a_max,\n",
+    "                      N=500,\n",
+    "                      kernel=\"gaussian\",\n",
+    "                      bw=\"silverman\"):\n",
     "    \"\"\"\n",
     "    calculate mutual information between continuous outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -64,27 +70,20 @@
     "    if _np.sum(\n",
     "            _b0\n",
     "    ) > 2:  # here proceed to kde only if there are more than 5 data points\n",
-    "        y_cond_p0 = _FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b0])\n",
+    "        y_cond_p0 = _FFTKDE(kernel=kernel, bw=bw).fit(data=a[_b0])\n",
     "#         y_cond_p0 = gaussian_kde(a[_b0])\n",
     "    else:\n",
     "        y_cond_p0 = _np.zeros_like\n",
     "    _b1 = (b == 1)\n",
     "    if _np.sum(_b1) > 2:\n",
-    "        y_cond_p1 = _FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b1])\n",
+    "        y_cond_p1 = _FFTKDE(kernel=kernel, bw=bw).fit(data=a[_b1])\n",
     "#         y_cond_p1 = gaussian_kde(a[_b1]) # this thing uses Scott's rule instead of Silverman defaulted by FFTKDE and R density\n",
     "    else:\n",
     "        y_cond_p1 = _np.zeros_like\n",
     "    _b2 = (b == 2)\n",
     "    if _np.sum(_b2) > 2:\n",
-    "        y_cond_p2 = _FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b2])\n",
+    "        y_cond_p2 = _FFTKDE(kernel=kernel, bw=bw).fit(data=a[_b2])\n",
     "\n",
-    "def _MI_bivariate_continuous():\n",
-    "    pass\n",
-    "    return \n",
-    "\n",
-    "def _MI_binary_continuous():\n",
-    "    pass\n",
-    "    return \n",
     "\n",
     "#         y_cond_p2 = gaussian_kde(a[_b2])\n",
     "    else:\n",
@@ -94,7 +93,7 @@
     "    joint[:, 0] = y_cond_p0(a_temp) * p0\n",
     "    joint[:, 1] = y_cond_p1(a_temp) * p1\n",
     "    joint[:, 2] = y_cond_p2(a_temp) * p2\n",
-    "    joint[joint < 1e-20] = 1e-20  # set a threshold to avoid numerical errors\n",
+    "    joint[joint < 1e-22] = 1e-22  # set a threshold to avoid numerical errors\n",
     "    forward_euler_step = a_temp[1] - a_temp[0]\n",
     "    #     print(\"total measure:\", _np.sum(joint)*forward_euler_step)\n",
     "    temp_log = _np.log(joint)\n",
@@ -102,7 +101,7 @@
     "    temp1 = _np.log(_np.sum(joint, 1))\n",
     "    #     temp1 = _np.nan_to_num(temp1, nan = 0)\n",
     "    temp_log = temp_log - temp1.reshape(-1, 1)\n",
-    "    temp2 = _np.log(_np.sum(joint, 0) * forward_euler_step)\n",
+    "    temp2 = _np.log(_np.sum(joint, 0)) + _np.log(forward_euler_step)\n",
     "    #     temp2 = _np.nan_to_num(temp2, nan = 0)\n",
     "    temp_log = temp_log - temp2.reshape(1, -1)\n",
     "    # print(fhat_mat * temp_log)\n",
@@ -112,7 +111,7 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "def _MI_binary_SNP(a, b):\n",
+    "def MI_binary_SNP(a, b):\n",
     "    \"\"\"\n",
     "    calculate mutual information between binary outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -148,15 +147,58 @@
     "    return mi_temp\n",
     "\n",
     "\n",
+    "# make this function available\n",
+    "def MI_bivariate_continuous(a,\n",
+    "                            b,\n",
+    "                            a_min,\n",
+    "                            a_max,\n",
+    "                            b_min,\n",
+    "                            b_max,\n",
+    "                            a_N=500,\n",
+    "                            b_N=500,\n",
+    "                            kernel=\"gaussian\",\n",
+    "                            bw=\"silverman\",\n",
+    "                            norm=2):\n",
+    "    a_temp = _np.linspace(a_min, a_max, num=a_N)\n",
+    "    b_temp = _np.linspace(b_min, b_max, num=b_N)\n",
+    "    joint = _np.empty((a_N, b_N))\n",
+    "    forward_euler_step_a = a_temp[1] - a_temp[0]\n",
+    "    forward_euler_step_b = b_temp[1] - b_temp[0]\n",
+    "    data = np.hstack(a.reshape(-1, 1), b.reshape(-1, 1))\n",
+    "    grid, points = FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate(\n",
+    "        (a_temp, b_temp))\n",
+    "    # grid here is the joint density\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "# make this function available\n",
+    "def MI_binary_continuous(a,\n",
+    "                         b,\n",
+    "                         b_min,\n",
+    "                         b_max,\n",
+    "                         N=500,\n",
+    "                         kernel=\"gaussian\",\n",
+    "                         bw=\"silverman\"):\n",
+    "    return MI_continuous_SNP(a=b,\n",
+    "                             b=a,\n",
+    "                             a_min=b_min,\n",
+    "                             a_max=b_max,\n",
+    "                             N=N,\n",
+    "                             kernel=kernel,\n",
+    "                             bw=bw)\n",
+    "\n",
+    "\n",
     "# outcome_iid should be a  list of strings for identifiers\n",
     "def continuous_filter_plink(bed_file,\n",
-    "                      bim_file,\n",
-    "                      fam_file,\n",
-    "                      outcome,\n",
-    "                      outcome_iid,\n",
-    "                      a_min=1.2345654321,\n",
-    "                      a_max=2.34565432,\n",
-    "                      N=500):\n",
+    "                            bim_file,\n",
+    "                            fam_file,\n",
+    "                            outcome,\n",
+    "                            outcome_iid,\n",
+    "                            a_min=1.2345654321,\n",
+    "                            a_max=2.34565432,\n",
+    "                            N=500,\n",
+    "                            kernel=\"gaussian\",\n",
+    "                            bw=\"silverman\"):\n",
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -184,11 +226,13 @@
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        MI_UKBB[j] = _MI_continuous_SNP(a=_outcome,\n",
-    "                                    b=_SNP,\n",
-    "                                    a_min=a_min,\n",
-    "                                    a_max=a_max,\n",
-    "                                    N=N)\n",
+    "        MI_UKBB[j] = MI_continuous_SNP(a=_outcome,\n",
+    "                                       b=_SNP,\n",
+    "                                       a_min=a_min,\n",
+    "                                       a_max=a_max,\n",
+    "                                       N=N,\n",
+    "                                       kernel=kernel,\n",
+    "                                       bw=bw)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
@@ -217,20 +261,22 @@
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        MI_UKBB[j] = _MI_binary_SNP(a=_outcome, b=_SNP)\n",
+    "        MI_UKBB[j] = MI_binary_SNP(a=_outcome, b=_SNP)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
     "def continuous_filter_plink_parallel(bed_file,\n",
-    "                               bim_file,\n",
-    "                               fam_file,\n",
-    "                               outcome,\n",
-    "                               outcome_iid,\n",
-    "                               a_min=1.2345654321,\n",
-    "                               a_max=2.34565432,\n",
-    "                               N=500,\n",
-    "                               core_num=\"NOT DECLARED\",\n",
-    "                               multp=1):\n",
+    "                                     bim_file,\n",
+    "                                     fam_file,\n",
+    "                                     outcome,\n",
+    "                                     outcome_iid,\n",
+    "                                     a_min=1.2345654321,\n",
+    "                                     a_max=2.34565432,\n",
+    "                                     N=500,\n",
+    "                                     core_num=\"NOT DECLARED\",\n",
+    "                                     multp=1,\n",
+    "                                     kernel=\"gaussian\",\n",
+    "                                     bw=\"silverman\"):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -268,11 +314,13 @@
     "            _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "            _MI_slice[k] = _MI_continuous_SNP(a=_outcome,\n",
-    "                                          b=_SNP,\n",
-    "                                          a_min=a_min,\n",
-    "                                          a_max=a_max,\n",
-    "                                          N=N)\n",
+    "            _MI_slice[k] = MI_continuous_SNP(a=_outcome,\n",
+    "                                             b=_SNP,\n",
+    "                                             a_min=a_min,\n",
+    "                                             a_max=a_max,\n",
+    "                                             N=N,\n",
+    "                                             kernel=kernel,\n",
+    "                                             bw=bw)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "\n",
@@ -286,12 +334,12 @@
     "\n",
     "\n",
     "def binary_filter_plink_parallel(bed_file,\n",
-    "                           bim_file,\n",
-    "                           fam_file,\n",
-    "                           outcome,\n",
-    "                           outcome_iid,\n",
-    "                           core_num=\"NOT DECLARED\",\n",
-    "                           multp=1):\n",
+    "                                 bim_file,\n",
+    "                                 fam_file,\n",
+    "                                 outcome,\n",
+    "                                 outcome_iid,\n",
+    "                                 core_num=\"NOT DECLARED\",\n",
+    "                                 multp=1):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -325,7 +373,7 @@
     "            _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "            _MI_slice[k] = _MI_binary_SNP(a=_outcome, b=_SNP)\n",
+    "            _MI_slice[k] = MI_binary_SNP(a=_outcome, b=_SNP)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "\n",
@@ -337,21 +385,33 @@
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n",
-    "def binary_filter_csv():\n",
-    "    pass\n",
-    "    return \n",
+    "\n",
+    "def binary_filter_csv(csv_names=[]):\n",
+    "    if _np.array(csv_names).size == 0:\n",
+    "        print(\n",
+    "            \"Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\"\n",
+    "        )\n",
+    "        csv_names = ...\n",
+    "        print(\"Reading variable names from csv file finished.\")\n",
+    "    else:\n",
+    "        csv_names = _np.array(csv_names)\n",
+    "\n",
+    "    return\n",
+    "\n",
     "\n",
     "def continuous_filter_csv():\n",
     "    pass\n",
-    "    return \n",
+    "    return\n",
+    "\n",
     "\n",
     "def binary_filter_csv_parallel():\n",
     "    pass\n",
     "    return\n",
     "\n",
+    "\n",
     "def continuous_filter_csv_parallel():\n",
     "    pass\n",
-    "    return\n"
+    "    return"
    ]
   },
   {
@@ -378,7 +438,7 @@
     "\n",
     "a = np.random.binomial(2, .3, 200)\n",
     "b = np.random.binomial(2, .3, 200)\n",
-    "print(_MI_binary(a, b))"
+    "print(_MI_binary_SNP(a, b))"
    ]
   },
   {
@@ -439,13 +499,13 @@
     "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
     "MI_continuous = continuous_filter_plink_parallel(bed_file=bed_file,\n",
-    "                                           bim_file=bim_file,\n",
-    "                                           fam_file=fam_file,\n",
-    "                                           a_min=np.min(outcome) - 10,\n",
-    "                                           a_max=np.max(outcome) + 10,\n",
-    "                                           outcome=outcome,\n",
-    "                                           outcome_iid=outcome_iid,\n",
-    "                                           multp=2)\n",
+    "                                                 bim_file=bim_file,\n",
+    "                                                 fam_file=fam_file,\n",
+    "                                                 a_min=np.min(outcome) - 10,\n",
+    "                                                 a_max=np.max(outcome) + 10,\n",
+    "                                                 outcome=outcome,\n",
+    "                                                 outcome_iid=outcome_iid,\n",
+    "                                                 multp=2)\n",
     "\n",
     "MI_continuous[:20]"
    ]
@@ -508,10 +568,10 @@
     "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
     "MI_binary = binary_filter_plink_parallel(bed_file=bed_file,\n",
-    "                                   bim_file=bim_file,\n",
-    "                                   fam_file=fam_file,\n",
-    "                                   outcome=outcome,\n",
-    "                                   outcome_iid=outcome_iid)\n",
+    "                                         bim_file=bim_file,\n",
+    "                                         fam_file=fam_file,\n",
+    "                                         outcome=outcome,\n",
+    "                                         outcome_iid=outcome_iid)\n",
     "\n",
     "MI_binary[:20]"
    ]
