--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-31T03:46:21.042816Z",
-     "start_time": "2022-10-31T03:46:21.022299Z"
+     "end_time": "2022-11-17T01:49:30.833051Z",
+     "start_time": "2022-11-17T01:49:30.751007Z"
     }
    },
    "outputs": [],
@@ -154,7 +154,7 @@
     "                            a_max,\n",
     "                            b_min,\n",
     "                            b_max,\n",
-    "                            a_N=500,\n",
+    "                            a_N=300,\n",
     "                            b_N=500,\n",
     "                            kernel=\"gaussian\",\n",
     "                            bw=\"silverman\",\n",
@@ -164,11 +164,18 @@
     "    joint = _np.empty((a_N, b_N))\n",
     "    forward_euler_step_a = a_temp[1] - a_temp[0]\n",
     "    forward_euler_step_b = b_temp[1] - b_temp[0]\n",
-    "    data = np.hstack(a.reshape(-1, 1), b.reshape(-1, 1))\n",
-    "    grid, points = FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate(\n",
+    "    data = _np.hstack(a.reshape(-1, 1), b.reshape(-1, 1))\n",
+    "    joint, points = FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate(\n",
     "        (a_temp, b_temp))\n",
-    "    # grid here is the joint density\n",
-    "    return\n",
+    "    joint[joint < 1e-22] = 1e-22\n",
+    "    a_forward_euler_step = a[1] - a[0]\n",
+    "    b_forward_euler_step = b[1] - b[0]\n",
+    "    log_a_marginal = _np.log(_np.sum(joint, 1)) + _np.log(b_forward_euler_step)\n",
+    "    log_b_marginal = _np.log(_np.sum(joint, 0)) + _np.log(a_forward_euler_step)\n",
+    "    log_joint = _np.log(joint)\n",
+    "    mi_temp = _np.sum(joint * (log_joint - log_a_marginal.reshape(\n",
+    "        -1, 1) - log_b_marginal)) * a_forward_euler_step * b_forward_euler_step\n",
+    "    return mi_temp\n",
     "\n",
     "\n",
     "# make this function available\n",
@@ -438,7 +445,11 @@
     "\n",
     "a = np.random.binomial(2, .3, 200)\n",
     "b = np.random.binomial(2, .3, 200)\n",
-    "print(_MI_binary_SNP(a, b))"
+    "print(MI_binary_SNP(a, b))\n",
+    "\n",
+    "a = np.random.normal(200)\n",
+    "b = np.random.normal(200)\n",
+    "print(MI_binary_continuous(a, b))"
    ]
   },
   {
