--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:00:49.672330Z",
-     "start_time": "2022-11-17T05:00:49.228264Z"
+     "end_time": "2022-10-31T03:46:21.020983Z",
+     "start_time": "2022-10-31T03:46:20.574657Z"
     }
    },
    "outputs": [],
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:01:37.823510Z",
-     "start_time": "2022-11-17T05:01:37.798978Z"
+     "end_time": "2022-11-17T01:49:30.833051Z",
+     "start_time": "2022-11-17T01:49:30.751007Z"
     }
    },
    "outputs": [],
@@ -150,21 +150,26 @@
     "# make this function available\n",
     "def MI_bivariate_continuous(a,\n",
     "                            b,\n",
-    "                            N=500,\n",
+    "                            a_min,\n",
+    "                            a_max,\n",
+    "                            b_min,\n",
+    "                            b_max,\n",
+    "                            a_N=300,\n",
+    "                            b_N=500,\n",
     "                            kernel=\"gaussian\",\n",
     "                            bw=\"silverman\",\n",
     "                            norm=2):\n",
-    "    joint = _np.empty((N, N))\n",
-    "    _ = np.argsort(a)\n",
-    "    data = _np.hstack((a[_].reshape(-1, 1), b[_].reshape(-1, 1)))\n",
-    "#     support = _np.hstack((a_temp.reshape(-1, 1), b_temp.reshape(-1, 1)))\n",
-    "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate(N)\n",
-    "    joint = joint.reshape(N, N)\n",
-    "    a_temp, b_temp = np.unique(grid[:, 0]), np.unique(grid[:, 1])\n",
-    "    a_forward_euler_step = a_temp[1] - a_temp[0]\n",
-    "    b_forward_euler_step = b_temp[1] - b_temp[0]\n",
-    "    print(a_forward_euler_step, b_forward_euler_step)\n",
+    "    a_temp = _np.linspace(a_min, a_max, num=a_N)\n",
+    "    b_temp = _np.linspace(b_min, b_max, num=b_N)\n",
+    "    joint = _np.empty((a_N, b_N))\n",
+    "    forward_euler_step_a = a_temp[1] - a_temp[0]\n",
+    "    forward_euler_step_b = b_temp[1] - b_temp[0]\n",
+    "    data = _np.hstack(a.reshape(-1, 1), b.reshape(-1, 1))\n",
+    "    joint, points = FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate(\n",
+    "        (a_temp, b_temp))\n",
     "    joint[joint < 1e-22] = 1e-22\n",
+    "    a_forward_euler_step = a[1] - a[0]\n",
+    "    b_forward_euler_step = b[1] - b[0]\n",
     "    log_a_marginal = _np.log(_np.sum(joint, 1)) + _np.log(b_forward_euler_step)\n",
     "    log_b_marginal = _np.log(_np.sum(joint, 0)) + _np.log(a_forward_euler_step)\n",
     "    log_joint = _np.log(joint)\n",
@@ -418,12 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:02:36.539302Z",
-     "start_time": "2022-11-17T05:02:36.480425Z"
+     "end_time": "2022-10-31T03:46:21.053855Z",
+     "start_time": "2022-10-31T03:46:21.043794Z"
     }
    },
    "outputs": [
@@ -431,9 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6944281854807008\n",
-      "0.026647876876319643 0.026647876876319643\n",
-      "0.1522938399830749\n"
+      "0.0068276193764706585\n"
      ]
     }
    ],
@@ -442,12 +445,11 @@
     "\n",
     "a = np.random.binomial(2, .3, 200)\n",
     "b = np.random.binomial(2, .3, 200)\n",
-    "print(MI_binary_SNP(a, a))\n",
+    "print(MI_binary_SNP(a, b))\n",
     "\n",
-    "a = np.random.normal(size=200)\n",
-    "b = np.random.normal(size=200)\n",
-    "\n",
-    "print(MI_bivariate_continuous(a, a))\n"
+    "a = np.random.normal(200)\n",
+    "b = np.random.normal(200)\n",
+    "print(MI_binary_continuous(a, b))"
    ]
   },
   {
@@ -456,8 +458,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:00:56.878038Z",
-     "start_time": "2022-11-17T05:00:49.779028Z"
+     "end_time": "2022-10-31T03:46:28.109052Z",
+     "start_time": "2022-10-31T03:46:21.055268Z"
     }
    },
    "outputs": [
@@ -473,10 +475,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47852592, 0.12455825, 0.134242  , 0.00088142, 0.00209893,\n",
-       "       0.00122761, 0.00096192, 0.00179534, 0.00126833, 0.0012563 ,\n",
-       "       0.00186209, 0.00125313, 0.00152109, 0.00160285, 0.00161438,\n",
-       "       0.00196986, 0.00124006, 0.00200753, 0.00191903, 0.001065  ])"
+       "array([0.4800993 , 0.12393376, 0.13491126, 0.00106491, 0.00214164,\n",
+       "       0.00115878, 0.00113526, 0.00166525, 0.00126826, 0.00142868,\n",
+       "       0.00163169, 0.00128086, 0.00142342, 0.00156017, 0.00159081,\n",
+       "       0.00189879, 0.0012721 , 0.00178034, 0.00168885, 0.00124075])"
       ]
      },
      "execution_count": 4,
@@ -488,9 +490,9 @@
     "import numpy as np\n",
     "from bed_reader import open_bed\n",
     "\n",
-    "bed_file = r\"./fastHDMI/tests/sim/sim1.bed\"\n",
-    "bim_file = r\"./fastHDMI/tests/sim/sim1.bim\"\n",
-    "fam_file = r\"./fastHDMI/tests/sim/sim1.fam\"\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
     "\n",
     "_bed = open_bed(filepath=bed_file,\n",
     "                fam_filepath=fam_file,\n",
@@ -525,8 +527,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:00:59.101940Z",
-     "start_time": "2022-11-17T05:00:56.879019Z"
+     "end_time": "2022-10-31T03:46:30.429242Z",
+     "start_time": "2022-10-31T03:46:28.110137Z"
     }
    },
    "outputs": [
@@ -542,11 +544,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1.24511916e-01, 3.52639827e-02, 5.04172146e-02, 6.03172300e-05,\n",
-       "       2.27232389e-05, 4.05556303e-04, 1.44706846e-04, 7.33012511e-04,\n",
-       "       2.10722325e-04, 2.15054119e-04, 1.77534971e-04, 6.79497773e-06,\n",
-       "       3.48450187e-05, 5.91009171e-04, 4.21371917e-05, 6.57400886e-05,\n",
-       "       2.95040570e-04, 5.08814437e-05, 2.26162657e-04, 2.96189130e-04])"
+       "array([1.14262209e-01, 3.75363611e-02, 4.66570672e-02, 3.92657502e-05,\n",
+       "       4.73413910e-04, 1.63181674e-04, 3.97781040e-04, 4.95960688e-04,\n",
+       "       2.34414840e-05, 2.61841071e-04, 8.79649999e-05, 2.24676914e-04,\n",
+       "       5.04342096e-04, 3.54922399e-04, 1.34387451e-04, 7.05882607e-05,\n",
+       "       1.87493771e-04, 1.14496131e-05, 1.61946226e-04, 3.40578626e-04])"
       ]
      },
      "execution_count": 5,
@@ -555,9 +557,9 @@
     }
    ],
    "source": [
-    "bed_file = r\"./fastHDMI/tests/sim/sim1.bed\"\n",
-    "bim_file = r\"./fastHDMI/tests/sim/sim1.bim\"\n",
-    "fam_file = r\"./fastHDMI/tests/sim/sim1.fam\"\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
     "\n",
     "_bed = open_bed(filepath=bed_file,\n",
     "                fam_filepath=fam_file,\n",
