--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:00:49.672330Z",
-     "start_time": "2022-11-17T05:00:49.228264Z"
+     "end_time": "2022-11-20T03:00:24.795112Z",
+     "start_time": "2022-11-20T03:00:24.351834Z"
     }
    },
    "outputs": [],
@@ -44,8 +44,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:01:37.823510Z",
-     "start_time": "2022-11-17T05:01:37.798978Z"
+     "end_time": "2022-11-20T03:06:47.414527Z",
+     "start_time": "2022-11-20T03:06:47.276728Z"
     }
    },
    "outputs": [],
@@ -150,20 +150,17 @@
     "# make this function available\n",
     "def MI_bivariate_continuous(a,\n",
     "                            b,\n",
-    "                            N=500,\n",
+    "                            a_N=301,\n",
+    "                            b_N=501,\n",
     "                            kernel=\"gaussian\",\n",
     "                            bw=\"silverman\",\n",
     "                            norm=2):\n",
-    "    joint = _np.empty((N, N))\n",
     "    _ = np.argsort(a)\n",
     "    data = _np.hstack((a[_].reshape(-1, 1), b[_].reshape(-1, 1)))\n",
-    "#     support = _np.hstack((a_temp.reshape(-1, 1), b_temp.reshape(-1, 1)))\n",
-    "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate(N)\n",
-    "    joint = joint.reshape(N, N)\n",
-    "    a_temp, b_temp = np.unique(grid[:, 0]), np.unique(grid[:, 1])\n",
-    "    a_forward_euler_step = a_temp[1] - a_temp[0]\n",
-    "    b_forward_euler_step = b_temp[1] - b_temp[0]\n",
-    "    print(a_forward_euler_step, b_forward_euler_step)\n",
+    "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate((a_N, b_N))\n",
+    "    joint = joint.reshape(a_N, b_N).T\n",
+    "    a_forward_euler_step = grid[b_N, 0] - grid[0, 0]\n",
+    "    b_forward_euler_step = grid[1, 1] - grid[0, 1]\n",
     "    joint[joint < 1e-22] = 1e-22\n",
     "    log_a_marginal = _np.log(_np.sum(joint, 1)) + _np.log(b_forward_euler_step)\n",
     "    log_b_marginal = _np.log(_np.sum(joint, 0)) + _np.log(a_forward_euler_step)\n",
@@ -418,12 +415,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:02:36.539302Z",
-     "start_time": "2022-11-17T05:02:36.480425Z"
+     "end_time": "2022-11-20T03:07:02.086044Z",
+     "start_time": "2022-11-20T03:07:02.056906Z"
     }
    },
    "outputs": [
@@ -431,9 +428,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6944281854807008\n",
-      "0.026647876876319643 0.026647876876319643\n",
-      "0.1522938399830749\n"
+      "0.005547843997921015\n",
+      "0.0003572971699847721\n"
      ]
     }
    ],
@@ -442,12 +438,12 @@
     "\n",
     "a = np.random.binomial(2, .3, 200)\n",
     "b = np.random.binomial(2, .3, 200)\n",
-    "print(MI_binary_SNP(a, a))\n",
+    "print(MI_binary_SNP(a, b))\n",
     "\n",
-    "a = np.random.normal(size=200)\n",
-    "b = np.random.normal(size=200)\n",
+    "a = np.random.normal(size=2000)\n",
+    "b = np.random.normal(size=2000)\n",
     "\n",
-    "print(MI_bivariate_continuous(a, a))\n"
+    "print(MI_bivariate_continuous(a, b))\n"
    ]
   },
   {
@@ -456,8 +452,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:00:56.878038Z",
-     "start_time": "2022-11-17T05:00:49.779028Z"
+     "end_time": "2022-11-20T03:00:32.272435Z",
+     "start_time": "2022-11-20T03:00:24.988347Z"
     }
    },
    "outputs": [
@@ -473,10 +469,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47852592, 0.12455825, 0.134242  , 0.00088142, 0.00209893,\n",
-       "       0.00122761, 0.00096192, 0.00179534, 0.00126833, 0.0012563 ,\n",
-       "       0.00186209, 0.00125313, 0.00152109, 0.00160285, 0.00161438,\n",
-       "       0.00196986, 0.00124006, 0.00200753, 0.00191903, 0.001065  ])"
+       "array([0.47654974, 0.12530774, 0.13575127, 0.00091295, 0.00210175,\n",
+       "       0.00121468, 0.00103621, 0.00172764, 0.0012446 , 0.00138906,\n",
+       "       0.00168882, 0.00127681, 0.00166733, 0.00157466, 0.00152053,\n",
+       "       0.00181206, 0.00125923, 0.00206949, 0.00208507, 0.00117623])"
       ]
      },
      "execution_count": 4,
@@ -525,8 +521,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-17T05:00:59.101940Z",
-     "start_time": "2022-11-17T05:00:56.879019Z"
+     "end_time": "2022-11-20T03:00:34.640543Z",
+     "start_time": "2022-11-20T03:00:32.273676Z"
     }
    },
    "outputs": [
@@ -542,11 +538,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1.24511916e-01, 3.52639827e-02, 5.04172146e-02, 6.03172300e-05,\n",
-       "       2.27232389e-05, 4.05556303e-04, 1.44706846e-04, 7.33012511e-04,\n",
-       "       2.10722325e-04, 2.15054119e-04, 1.77534971e-04, 6.79497773e-06,\n",
-       "       3.48450187e-05, 5.91009171e-04, 4.21371917e-05, 6.57400886e-05,\n",
-       "       2.95040570e-04, 5.08814437e-05, 2.26162657e-04, 2.96189130e-04])"
+       "array([1.14103934e-01, 4.04554507e-02, 4.72763718e-02, 1.65077174e-04,\n",
+       "       1.14838118e-04, 3.39356268e-04, 2.77244317e-04, 6.49306536e-04,\n",
+       "       1.18074559e-04, 7.76791523e-04, 7.69184942e-05, 1.19702122e-04,\n",
+       "       2.53264739e-04, 1.48978237e-04, 7.01670730e-05, 1.72499718e-06,\n",
+       "       2.00673566e-04, 1.61035701e-04, 4.13831030e-05, 8.19583948e-04])"
       ]
      },
      "execution_count": 5,
