--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T03:00:24.795112Z",
-     "start_time": "2022-11-20T03:00:24.351834Z"
+     "end_time": "2022-11-21T12:15:19.957826Z",
+     "start_time": "2022-11-21T12:15:19.255138Z"
     }
    },
    "outputs": [],
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T03:06:47.414527Z",
-     "start_time": "2022-11-20T03:06:47.276728Z"
+     "end_time": "2022-11-21T12:18:55.673613Z",
+     "start_time": "2022-11-21T12:18:55.648989Z"
     }
    },
    "outputs": [],
@@ -158,12 +158,16 @@
     "    _ = np.argsort(a)\n",
     "    data = _np.hstack((a[_].reshape(-1, 1), b[_].reshape(-1, 1)))\n",
     "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate((a_N, b_N))\n",
-    "    joint = joint.reshape(a_N, b_N).T\n",
+    "    joint = joint.reshape(b_N, a_N).T\n",
+    "    print(\"joint shape:\", joint.shape)\n",
     "    a_forward_euler_step = grid[b_N, 0] - grid[0, 0]\n",
     "    b_forward_euler_step = grid[1, 1] - grid[0, 1]\n",
     "    joint[joint < 1e-22] = 1e-22\n",
     "    log_a_marginal = _np.log(_np.sum(joint, 1)) + _np.log(b_forward_euler_step)\n",
+    "    print(\"log_a_margianl shape:\", log_a_marginal.shape)\n",
     "    log_b_marginal = _np.log(_np.sum(joint, 0)) + _np.log(a_forward_euler_step)\n",
+    "    print(\"log_b_margianl shape:\", log_b_marginal.shape)\n",
+    "\n",
     "    log_joint = _np.log(joint)\n",
     "    mi_temp = _np.sum(joint * (log_joint - log_a_marginal.reshape(\n",
     "        -1, 1) - log_b_marginal)) * a_forward_euler_step * b_forward_euler_step\n",
@@ -415,12 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T03:07:02.086044Z",
-     "start_time": "2022-11-20T03:07:02.056906Z"
+     "end_time": "2022-11-21T12:19:09.183494Z",
+     "start_time": "2022-11-21T12:19:09.075525Z"
     }
    },
    "outputs": [
@@ -428,8 +432,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.005547843997921015\n",
-      "0.0003572971699847721\n"
+      "0.02190457790089801\n",
+      "joint shape: (301, 501)\n",
+      "log_a_margianl shape: (301,)\n",
+      "log_b_margianl shape: (501,)\n",
+      "0.7271167714296668\n"
      ]
     }
    ],
@@ -452,8 +459,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T03:00:32.272435Z",
-     "start_time": "2022-11-20T03:00:24.988347Z"
+     "end_time": "2022-11-21T12:15:27.466463Z",
+     "start_time": "2022-11-21T12:15:20.020995Z"
     }
    },
    "outputs": [
@@ -469,10 +476,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47654974, 0.12530774, 0.13575127, 0.00091295, 0.00210175,\n",
-       "       0.00121468, 0.00103621, 0.00172764, 0.0012446 , 0.00138906,\n",
-       "       0.00168882, 0.00127681, 0.00166733, 0.00157466, 0.00152053,\n",
-       "       0.00181206, 0.00125923, 0.00206949, 0.00208507, 0.00117623])"
+       "array([0.47894155, 0.12429307, 0.13433472, 0.00098337, 0.00184237,\n",
+       "       0.00117129, 0.001186  , 0.00169651, 0.00127239, 0.00120717,\n",
+       "       0.00187645, 0.00116754, 0.00133607, 0.00156339, 0.00149925,\n",
+       "       0.00203289, 0.00152007, 0.00164046, 0.00193518, 0.00116396])"
       ]
      },
      "execution_count": 4,
@@ -521,8 +528,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T03:00:34.640543Z",
-     "start_time": "2022-11-20T03:00:32.273676Z"
+     "end_time": "2022-11-21T12:15:29.829167Z",
+     "start_time": "2022-11-21T12:15:27.467653Z"
     }
    },
    "outputs": [
@@ -538,11 +545,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1.14103934e-01, 4.04554507e-02, 4.72763718e-02, 1.65077174e-04,\n",
-       "       1.14838118e-04, 3.39356268e-04, 2.77244317e-04, 6.49306536e-04,\n",
-       "       1.18074559e-04, 7.76791523e-04, 7.69184942e-05, 1.19702122e-04,\n",
-       "       2.53264739e-04, 1.48978237e-04, 7.01670730e-05, 1.72499718e-06,\n",
-       "       2.00673566e-04, 1.61035701e-04, 4.13831030e-05, 8.19583948e-04])"
+       "array([1.19655405e-01, 3.46340806e-02, 4.88232958e-02, 9.84512494e-06,\n",
+       "       9.22237549e-05, 8.14027824e-04, 3.86235001e-04, 1.81639057e-04,\n",
+       "       2.48284535e-04, 7.20545712e-04, 1.70401685e-04, 6.57153104e-05,\n",
+       "       3.18932693e-04, 9.93049219e-04, 2.21345906e-05, 4.66056301e-05,\n",
+       "       4.13500779e-05, 6.82111872e-05, 7.49997112e-05, 4.01410515e-04])"
       ]
      },
      "execution_count": 5,
