--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,11 +6,23 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T12:15:19.957826Z",
-     "start_time": "2022-11-21T12:15:19.255138Z"
+     "end_time": "2022-11-21T14:12:10.023048Z",
+     "start_time": "2022-11-21T14:12:09.735261Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bed_reader'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zc/y092358s2412m31ltptpms_w0000gn/T/ipykernel_3463/1857955960.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# from pysnptools.distreader import Bgen, DistMemMap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# from pathlib import Path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbed_reader\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mopen_bed\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_open_bed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;31m# from pysnptools.snpreader import SnpData, SnpMemMap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m# from pysnptools.util import log_in_place\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bed_reader'"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "\n",
@@ -155,10 +167,13 @@
     "                            kernel=\"gaussian\",\n",
     "                            bw=\"silverman\",\n",
     "                            norm=2):\n",
+    "    \"\"\"\n",
+    "    (Single Core version) calculate mutual information on bivariate continuous r.v..\n",
+    "    \"\"\"\n",
     "    _ = np.argsort(a)\n",
     "    data = _np.hstack((a[_].reshape(-1, 1), b[_].reshape(-1, 1)))\n",
     "    grid, joint = _FFTKDE(kernel=kernel, norm=norm).fit(data).evaluate((a_N, b_N))\n",
-    "    joint = joint.reshape(b_N, a_N).T\n",
+    "    joint = joint.reshape(b_N, -1).T\n",
     "    print(\"joint shape:\", joint.shape)\n",
     "    a_forward_euler_step = grid[b_N, 0] - grid[0, 0]\n",
     "    b_forward_euler_step = grid[1, 1] - grid[0, 1]\n",
@@ -170,7 +185,7 @@
     "\n",
     "    log_joint = _np.log(joint)\n",
     "    mi_temp = _np.sum(joint * (log_joint - log_a_marginal.reshape(\n",
-    "        -1, 1) - log_b_marginal)) * a_forward_euler_step * b_forward_euler_step\n",
+    "        -1, 1) - log_b_marginal.reshape(1,-1))) * a_forward_euler_step * b_forward_euler_step\n",
     "    return mi_temp\n",
     "\n",
     "\n",
@@ -398,8 +413,15 @@
     "        print(\"Reading variable names from csv file finished.\")\n",
     "    else:\n",
     "        csv_names = _np.array(csv_names)\n",
-    "\n",
-    "    return\n",
+    "    MI_csv = np.empty(len(csv_names)-1)\n",
+    "    for j in np.arange(len(csv_names)-1):\n",
+    "        __ = csv_names[0, j+1]\n",
+    "        _ = pd.read_csv(outcome_file,\n",
+    "                 skipinitialspace=True,\n",
+    "                 usecols=__,\n",
+    "                 encoding='unicode_escape').dropna()\n",
+    "        MI_csv[j] = MI_binary_continuous(_[:,0], _[:,1])\n",
+    "    return csv_names, MI_csv\n",
     "\n",
     "\n",
     "def continuous_filter_csv():\n",
@@ -450,7 +472,7 @@
     "a = np.random.normal(size=2000)\n",
     "b = np.random.normal(size=2000)\n",
     "\n",
-    "print(MI_bivariate_continuous(a, b))\n"
+    "print(MI_bivariate_continuous(a, b))"
    ]
   },
   {
